--- a/app/src/main/res/layout/dialog_subtask.xml
+++ b/app/src/main/res/layout/dialog_subtask.xml
@@ -3,11 +3,16 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="20dp">
 
-    <EditText
-        android:id="@+id/input_subtask_title"
+    <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/subtask_title_hint" />
+        android:hint="@string/subtask_title_hint">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/input_subtask_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </com.google.android.material.textfield.TextInputLayout>
 </LinearLayout>
