--- a/app/src/main/res/layout/dialog_task.xml
+++ b/app/src/main/res/layout/dialog_task.xml
@@ -1,15 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="20dp">
 
-    <EditText
-        android:id="@+id/input_title"
+    <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/new_task_hint" />
+        android:hint="@string/new_task_hint">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/input_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.chip.Chip
+        android:id="@+id/deadline_text"
+        style="@style/Widget.Material3.Chip.Assist"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:checked="false"
+        android:clickable="false"
+        android:text="@string/deadline_not_set"
+        app:chipIcon="@drawable/ic_calendar_24"
+        app:chipIconTint="?attr/colorOnSecondaryContainer" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,25 +36,23 @@
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/deadline_text"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />
-
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/select_deadline_button"
+            style="@style/Widget.Material3.Button.TonalButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/select_deadline" />
+            android:text="@string/select_deadline"
+            app:icon="@drawable/ic_calendar_24"
+            app:iconGravity="textStart" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/clear_deadline_button"
+            style="@style/Widget.Material3.Button.TextButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
+            android:text="@string/clear_deadline"
+            app:icon="@drawable/ic_delete_24"
+            app:iconGravity="textStart" />
     </LinearLayout>
-
-    <Button
-        android:id="@+id/clear_deadline_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="@string/clear_deadline" />
-
 </LinearLayout>
