--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,4 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item
+        android:id="@+id/nav_tasks"
+        android:title="@string/menu_tasks"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/nav_calendar"
+        android:title="@string/menu_calendar"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/nav_archive"
+        android:title="@string/menu_archive"
+        app:showAsAction="never" />
 </menu>
