--- a/app/src/main/res/menu/menu_tasks_actions.xml
+++ b/app/src/main/res/menu/menu_tasks_actions.xml
@@ -3,6 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/action_search"
+        android:icon="@drawable/ic_search_24"
+        android:title="@string/search_hint"
+        app:actionViewClass="androidx.appcompat.widget.SearchView"
+        app:showAsAction="collapseActionView|ifRoom" />
+
+    <item
         android:id="@+id/action_groups"
         android:title="@string/menu_groups"
         app:showAsAction="never" />
