--- a/app/src/main/res/menu/menu_tasks_actions.xml
+++ b/app/src/main/res/menu/menu_tasks_actions.xml
@@ -13,4 +13,9 @@
         android:id="@+id/action_groups"
         android:title="@string/menu_groups"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_tags"
+        android:title="@string/menu_tags"
+        app:showAsAction="never" />
 </menu>
